--- a/index.html
+++ b/index.html
@@ -50,17 +50,21 @@
 
 <nav class="navbar navbar-expand-lg sticky-top">
   <div class="container">
-    <a class="navbar-brand fw-bold text-primary" href="#">UMUAHIA <span class="text-dark">TUTORS</span></a>
+    <a class="navbar-brand fw-bold text-primary" href="#">UMUAHIA <span class="text-dark">ELITE SERVICES</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#how-it-works">How It Works</a></li>
-        <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="#parentForm">Find a Tutor</a></li>
-        <li class="nav-item"><a class="btn btn-primary ms-lg-3" href="#tutorForm">Join as Tutor</a></li>
-      </ul>
+  <li class="nav-item">
+    <a class="nav-link" href="service.html">
+      <i class="fas fa-tools me-1"></i> Home Services
+    </a>
+  </li>
+  <li class="nav-item"><a class="nav-link" href="#how-it-works">How It Works</a></li>
+  <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
+  <li class="nav-item"><a class="nav-link" href="#parentForm">Find a Tutor</a></li>
+  <li class="nav-item"><a class="btn btn-primary ms-lg-3" href="#tutorForm">Join as Tutor</a></li>
+</ul>
     </div>
   </div>
 </nav>
@@ -300,6 +304,17 @@
   </div>
 </section>
 
+
+<section class="py-5 bg-light">
+  <div class="container text-center">
+    <h2 class="section-title">Need Other Home Services?</h2>
+    <p class="text-muted mb-4">We now offer trusted plumbing, electrical, cleaning, cooking and delivery services across Umuahia.</p>
+    <a href="service.html" class="btn btn-dark btn-lg px-4">
+      <i class="fas fa-tools me-2"></i>Explore Home Services
+    </a>
+  </div>
+</section>
+
 <footer>
   <div class="container">
     <div class="row g-4">
@@ -326,30 +341,40 @@
   </div>
 </footer>
 
+
 <script>
-  // Replace this with your actual WhatsApp number (include country code without +)
-  const MY_NUMBER = "+2347039280073"; 
+const MY_NUMBER = "2347039280073"; // without +
 
-  function sendWA(packageName) {
-    const msg = `Hello, I am interested in the ${packageName}. Please provide more details.`;
-    window.open(`https://wa.me/${+2347039280073}?text=${encodeURIComponent(msg)}`, '_blank');
-  }
+function sendWA(packageName) {
+  const msg = `Hello, I am interested in the ${packageName}. Please provide more details.`;
+  window.open(`https://wa.me/${MY_NUMBER}?text=${encodeURIComponent(msg)}`, '_blank');
+}
 
-  function submitParentForm() {
-    const name = document.getElementById('p_childName').value;
-    const cls = document.getElementById('p_class').value;
-    const loc = document.getElementById('p_location').value;
-    const msg = `Hello Umuahia Tutors, I need a tutor.\nChild: ${name}\nClass: ${cls}\nLocation: ${loc}`;
-    window.open(`https://wa.me/${+2347039280073}?text=${encodeURIComponent(msg)}`, '_blank');
-  }
+function submitParentForm() {
+  const name = document.getElementById('p_childName').value;
+  const cls = document.getElementById('p_class').value;
+  const loc = document.getElementById('p_location').value;
 
-  function submitTutorForm() {
-    const name = document.getElementById('t_name').value;
-    const qual = document.getElementById('t_qual').value;
-    const sub = document.getElementById('t_subjects').value;
-    const msg = `Tutor Application:\nName: ${name}\nQualification: ${qual}\nSubjects: ${sub}`;
-    window.open(`https://wa.me/${+2347039280073}?text=${encodeURIComponent(msg)}`, '_blank');
-  }
+  const msg = `Hello Umuahia Tutors, I need a tutor.
+Child: ${name}
+Class: ${cls}
+Location: ${loc}`;
+
+  window.open(`https://wa.me/${MY_NUMBER}?text=${encodeURIComponent(msg)}`, '_blank');
+}
+
+function submitTutorForm() {
+  const name = document.getElementById('t_name').value;
+  const qual = document.getElementById('t_qual').value;
+  const sub = document.getElementById('t_subjects').value;
+
+  const msg = `Tutor Application:
+Name: ${name}
+Qualification: ${qual}
+Subjects: ${sub}`;
+
+  window.open(`https://wa.me/${MY_NUMBER}?text=${encodeURIComponent(msg)}`, '_blank');
+}
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
