--- a/index.html
+++ b/index.html
@@ -48,24 +48,55 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
   <div class="container">
-    <a class="navbar-brand fw-bold text-primary" href="#">UMUAHIA <span class="text-dark">ELITE SERVICES</span></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+
+    <!-- BRAND -->
+    <a class="navbar-brand fw-bold text-primary" href="index.html">
+      UMUAHIA <span class="text-dark">ELITE SERVICES</span>
+    </a>
+
+    <!-- HAMBURGER BUTTON -->
+    <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-      <ul class="navbar-nav ms-auto">
-  <li class="nav-item">
-    <a class="nav-link" href="service.html">
-      <i class="fas fa-tools me-1"></i> Home Services
-    </a>
-  </li>
-  <li class="nav-item"><a class="nav-link" href="#how-it-works">How It Works</a></li>
-  <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
-  <li class="nav-item"><a class="nav-link" href="#parentForm">Find a Tutor</a></li>
-  <li class="nav-item"><a class="btn btn-primary ms-lg-3" href="#tutorForm">Join as Tutor</a></li>
-</ul>
+
+    <!-- COLLAPSIBLE MENU -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto align-items-lg-center">
+
+        <li class="nav-item">
+          <a class="nav-link" href="services.html">
+            <i class="fas fa-tools me-1"></i> Home Services
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#how-it-works">How It Works</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#pricing">Pricing</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#parentForm">Find a Tutor</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="btn btn-primary ms-lg-3 mt-2 mt-lg-0" href="#tutorForm">
+            Join as Tutor
+          </a>
+        </li>
+
+      </ul>
     </div>
+
   </div>
 </nav>
 
