--- a/public/index.html
+++ b/public/index.html
@@ -173,42 +173,43 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-const MY_NUMBER = "2347039280073";
+const MY_NUMBER = "2347045441093";
 
 function bookService(serviceName){
-  const msg = `Hello Umuahia Tutors, I would like to book your ${serviceName} service.`;
+  const msg = `Hello Elite home, I would like to book your ${serviceName} service.`;
   window.open(`https://wa.me/${MY_NUMBER}?text=${encodeURIComponent(msg)}`, '_blank');
 }
 </script>
-
 
 <script>
 document.getElementById("contactForm").addEventListener("submit", async function(e) {
   e.preventDefault();
 
-  const response = await fetch("/send-email", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify({
-      name: document.getElementById("name").value,
-      email: document.getElementById("email").value,
-      message: document.getElementById("message").value
-    })
-  });
-
   try {
-    const data = await response.json();
-    alert(data.message);
+    const response = await fetch("/send-email", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        name: document.getElementById("name").value,
+        email: document.getElementById("email").value,
+        message: document.getElementById("message").value
+      })
+    });
 
-    // Clear form after successful send
-    if (response.ok) {
-      document.getElementById("contactForm").reset();
+    const data = await response.json();
+
+    if (!response.ok) {
+      throw new Error(data.message || "Something went wrong");
     }
-  } catch (err) {
+
+    alert(data.message);
+    document.getElementById("contactForm").reset();
+
+  } catch (error) {
     alert("Error sending message. Please try again.");
-    console.error(err);
+    console.error("Submission error:", error);
   }
 });
 </script>
